# GitHandler

./: .gitignore  CMakeLists.txt  README.md
LIB/: git2.lib
SRC/: CMakeLists.txt  Deleters.h  GitBaseClasses.cpp  GitBaseClasses.h  GitDeleters.cpp  GitDeleters.h  GitHandler.cpp  GitHandler.h  GitItem.cpp  GitItem.h  GitItemFactory.h  GitTypedefs.h  gitupdater.cpp  gitupdater.h  gitupdater.qrc  gitupdater.ui  main.cpp
SRC/details/: UniquePointerCast.h
Test/: CMakeLists.txt
Test/Test/: Basic.cpp  CMakeLists.txt  TestArgs.h  main.cpp
